--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.102) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 09 Sep 2018 11:02:24 +0100
+
 lintian (2.5.101) unstable; urgency=medium
 
   * Summary of tag changes:
