Ensure package-contains-documentation-outside-usr-share-doc also excludes files in directories called (eg.) "autotools_templates". (Closes: #907734)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.102) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/files.pm:
+    + [CL] Ensure package-contains-documentation-outside-usr-share-doc also
+      excludes files in directories called (eg.) "autotools_templates".
+      (Closes: #907734)
+
   * data/fields/name_section_mappings:
     + [CL] Reclassify xfonts-foo packages as part of the "fonts" section as
       nobody was doing this in practice.  This reverts the change requested
