--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.103) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 11 Sep 2018 20:57:34 +0100
+
 lintian (2.5.102) unstable; urgency=medium
 
   * checks/files.pm:
