--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.103) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * private/refresh-manual-refs:
+    + [CL] Apply a patch series from Joseph Herlant to update some
+      locations of manual references.
+
   * t/helpers/bin/create-deb:
     + [CL] Apply a patch from Felix Lechner to removed a likely-accidental
       slash in a find(1) call.
