--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.105) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/cruft.pm:
+    + [CL] Do not emit package-does-not-install-examples for example
+      directories under "vendor" or "third_party".
+
  -- Chris Lamb <lamby@debian.org>  Fri, 21 Sep 2018 10:16:22 +0100
 
 lintian (2.5.104) unstable; urgency=medium
