--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ lintian (2.5.105) UNRELEASED; urgency=medium
     + [CL] Do not emit package-does-not-install-examples for example
       directories under "vendor" or "third_party".
 
+  * commands/lintian.pm:
+    + [CL] Show the number of unused overrides in the "N: 1 tag overridden
+      ..." summary line.  (Closes: #909319)
+
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to support dynamic test
       rebuilding.
