--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ lintian (2.5.105) UNRELEASED; urgency=medium
   * checks/cruft.pm:
     + [CL] Do not emit package-does-not-install-examples for example
       directories under "vendor" or "third_party".
+  * checks/debian-source-dir.{desc,pm}:
+    + [CL] Warn about debian/source/options specifying custom compression
+      settings.  (Closes: #906614)
   * checks/rules.{desc,pm}:
     + [CL] Expand and rename xz-compression-level-too-high to warn about
       all manual adjustments to such settings.  (Closes: #906611)
