--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-lintian (2.5.105) UNRELEASED; urgency=medium
+lintian (2.5.105) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - debian-rules-should-not-use-custom-compression-settings
+      - debian-source-options-has-custom-compression-settings
+    + Removed:
+      - xz-compression-level-too-high
 
   * checks/cruft.pm:
     + [CL] Do not emit package-does-not-install-examples for example
@@ -20,7 +25,7 @@ lintian (2.5.105) UNRELEASED; urgency=medium
     + [CL] Apply a patch series from Felix Lechner to support dynamic test
       rebuilding.
 
- -- Chris Lamb <lamby@debian.org>  Fri, 21 Sep 2018 10:16:22 +0100
+ -- Chris Lamb <lamby@debian.org>  Mon, 24 Sep 2018 10:04:39 +0000
 
 lintian (2.5.104) unstable; urgency=medium
 
