--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.106) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * t/runtests:
+    + [CL] Apply a patch series from Felix Lechner to support wildcards in
+      test architecture fields.  Thanks!
+
  -- Chris Lamb <lamby@debian.org>  Mon, 24 Sep 2018 11:49:19 +0100
 
 lintian (2.5.105) unstable; urgency=medium
