--- a/t/tests/files-foo-in-bar/debian/debian/install
+++ b/t/tests/files-foo-in-bar/debian/debian/install
@@ -2,6 +2,7 @@ bar bin/foo
 bar emul
 bar etc/apt/preferences.d
 bar etc/apt/sources.list.d
+bar etc/apt/trusted.gpg.d
 bar etc/gconf/schemas/
 bar etc/init
 bar etc/rc.boot
