--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ lintian (2.5.106) UNRELEASED; urgency=medium
   * checks/files.{desc,pm}:
     + [CL] Apply a patch from Josh Triplett to check for packages that
       install APT keyrings.
+    + [CL] Apply a patch from Josh Triplett to allow packages whose names
+      end in -apt-source to install APT sources.
 
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to support wildcards in
