--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ lintian (2.5.106) UNRELEASED; urgency=medium
       <https://salsa.debian.org/lintian/lintian/merge_requests/38> for more
       information.
     + [CL] Apply a patch series from Josh Triplett to add "Test-Depends" to
-      a few tests.  (Closes; #908915)
+      a few tests.  (Closes: #908915)
 
  -- Chris Lamb <lamby@debian.org>  Mon, 24 Sep 2018 11:49:19 +0100
 
