--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.107) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 26 Sep 2018 16:31:48 +0100
+
 lintian (2.5.106) unstable; urgency=medium
 
   * Summary of tag changes:
