checks/debhelper.desc: Discuss debhelper's existing optimizations.
debhelper already includes optimizations to avoid running commands when
unnecessary, but people might not know that. Mention that in the help
for debhelper-excessive-overrides, and encourage people to improve those
optimizations in debhelper if needed.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ lintian (2.5.107) UNRELEASED; urgency=medium
   * checks/changes-file.{desc,pm}:
     + [CL] Don't emit changelog-empty-entry if distribution is UNRELEASED.
       (Closes: #909674)
+  * checks/debhelper.desc:
+    + [CL] Apply patch from Josh Triplett to improve the long description
+      of excessive-debhelper-overrides.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 26 Sep 2018 16:31:48 +0100
 
