Add "practically" as a correction for "practicaly".

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ lintian (2.5.107) UNRELEASED; urgency=medium
     + [CL] Add a suggestion from Sven Joachim to add "practical" and
       "practically" as spelling corrections for "pratical" and
       "pratically".  (Closes: #909772)
+    + [CL] Add "practically" as a correction for "practicaly".
 
  -- Chris Lamb <lamby@debian.org>  Wed, 26 Sep 2018 16:31:48 +0100
 
