t/source/fields-src-bad-version: Rename test target to match name.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.108) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * t/source/fields-src-bad-version:
+    + [CL] Apply a patch from Felix Lechner to rename a test target to
+      match its name.
+
  -- Chris Lamb <lamby@debian.org>  Mon, 01 Oct 2018 15:06:03 +0100
 
 lintian (2.5.107) unstable; urgency=medium
