--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.108) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 01 Oct 2018 15:06:03 +0100
+
 lintian (2.5.107) unstable; urgency=medium
 
 
