Avoid testsuite-dependency-has-unparsable-elements false positives when the "Depends" field starts with a newline. (Closes: #910210)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.108) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/testsuite.pm:
+    + [CL] Avoid testsuite-dependency-has-unparsable-elements false
+      positives when the "Depends" field starts with a newline.  Mattia
+      Rizzolo for the report.  (Closes: #910210)
+
   * t/source/*:
     + [CL] Apply a patch from Felix Lechner to rename a test target to
       match its name.
