--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.109) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 05 Oct 2018 12:49:52 +0100
+
 lintian (2.5.108) unstable; urgency=medium
 
   * Summary of tag changes:
