Fix test descriptions not parsed correctly due to continuation lines.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.109) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * t/tests/*:
+    + [CL] Apply a patch from Felix Lechner to fix some test descriptions
+      not parsed correctly due to continuation lines.
+
  -- Chris Lamb <lamby@debian.org>  Fri, 05 Oct 2018 12:49:52 +0100
 
 lintian (2.5.108) unstable; urgency=medium
