--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ lintian (2.5.109) UNRELEASED; urgency=medium
   * checks/debhelper.pm:
     + [CL] Avoid false-positives when using the blends-dev package for the
       package-does-not-use-debhelper-or-cdbs tag.  (Closes: #910453)
+  * checks/scripts.{desc,pm}:
+    + [CL] Check for packages missing versioned dependencies on
+      init-system-helpers.  (Closes: #910594)
 
   * t/tests/*:
     + [CL] Apply a patch from Felix Lechner to fix some test descriptions
