t/tests/debhelper-dh-nativejava: Remove obsolete test (-gcj packages are no longer built).
The test t/tests/debhelper-dh-nativejava test the functionality of debhelper
script dh_nativejava. At one point, the script was shipped in gcj-native-helper,
which is still listed as a test dependency. For a while, it was shipped in
libgcj-common. Then it was removed from Debian. According to N. Thykier,
the script is now obsolete since we no longer build -gcj packages.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ lintian (2.5.109) UNRELEASED; urgency=medium
       architecture independent.
     + [CL] Apply a patch from Felix Lechner to require build dependencies
       as prerequisites for tests.
+  * t/tests/debhelper-dh-nativejava:
+    + [CL] Apply a patch from Felix Lechner to remove this now-obsolete
+      test given that -gcj packages are no-longer built.
 
  -- Chris Lamb <lamby@debian.org>  Fri, 05 Oct 2018 12:49:52 +0100
 
