--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,14 @@ lintian (2.5.110) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/debhelper.desc:
+    + [CL] Tidy a number of references regarding the debhelper-compat
+      virtual package, in particular clarifying that this does not work for
+      experimental/beta levels.
+    + [CL] Update example experimental combination of using compatibility
+      level 9 with debhelper >= 8.1.3 with using level 12 with
+      debhelper >= 11.4~.
+
  -- Chris Lamb <lamby@debian.org>  Tue, 16 Oct 2018 23:06:31 -0400
 
 lintian (2.5.109) unstable; urgency=medium
