checks/fields.pm: Fix a false-negative in the multi-arch-same-package-has-arch-specific-overrides tag. (Closes: #911355)
The Lintian test suite identified a false negative for the
'multi-arch-same-package-has-arch-specific-overrides' tag when the value of the
Architecture: field in 'debian/control' does not match the extension of the
lintian-override file. Both fields could be architecture wildcards. A positive
finding should take place when the latter is a subset of the former.

To reproduce, manually change both package architectures in the test
'fields-multi-arch-same-package-has-arch-specific-overrides' to Architecture:
any (in the file 'debian/debian/control.in'). The tag
'multi-arch-same-package-has-arch-specific-overrides' should disappear.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ lintian (2.5.110) UNRELEASED; urgency=medium
     + [CL] Update example experimental combination of using compatibility
       level 9 with debhelper >= 8.1.3 with using level 12 with
       debhelper >= 11.4~.
+  * checks/fields.pm:
+    + [CL] Apply a patch series from Felix Lechner to fix a false-negative
+      in the multi-arch-same-package-has-arch-specific-overrides tag.
+      (Closes: #911355)
 
   * data/binaries/spelling-exceptions:
     + [CL] Add "Nees" to the list of spelling-error-in-binary exceptions to
