--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,11 @@ lintian (2.5.110) UNRELEASED; urgency=medium
       level 9 with debhelper >= 8.1.3 with using level 12 with
       debhelper >= 11.4~.
 
+  * data/binaries/spelling-exceptions:
+    + [CL] Add "Nees" to the list of spelling-error-in-binary exceptions to
+      accomodate instances referencing Georg Nees, an early pioneer of
+      computer art and generative graphics.
+
  -- Chris Lamb <lamby@debian.org>  Tue, 16 Oct 2018 23:06:31 -0400
 
 lintian (2.5.109) unstable; urgency=medium
